Finish building frontend and backend